src/snapshots/lintoko__test__it_lints_custom_rules.snap
---
source: src/lib.rs
expression: lint_output
---
  × [ERROR]: no-result
   ╭─[<input_path>:1:1]
 1 │ import Result "mo:base/Result";
   · ───────────────┬──────────────
   ·                ╰── Do not use the Result pattern. Use Runtime.trap() instead.
 2 │ import OrderedMap "mo:base/OrderedMap";
   ╰────

  × [ERROR]: shared-caller
   ╭─[<input_path>:5:8]
 4 │ 
 5 │ shared (msg) actor class() {
   ·        ──┬──
   ·          ╰── Do not use `shared(msg)`. Use `shared({ caller })` instead.
 6 │   func letElse() {
   ╰────

  × [ERROR]: only-persistent-actor
   ╭─[<input_path>:5:14]
 4 │ 
 5 │ shared (msg) actor class() {
   ·              ──┬──
   ·                ╰── Only use persistent actors. Change `actor` to `persistent actor`.
 6 │   func letElse() {
   ╰────

  × [ERROR]: no-let-else
   ╭─[<input_path>:7:5]
 6 │   func letElse() {
 7 │     let ?x = null else { return };
   ·     ──────────────┬──────────────
   ·                   ╰── Do not use let-else. Use a switch instead.
 8 │   };
   ╰────

  × [ERROR]: no-flexible
    ╭─[<input_path>:10:3]
  9 │ 
 10 │   flexible let flexibleLet = 42;
    ·   ────┬───
    ·       ╰── Do not use the `flexible` keyword. Use `transient` instead.
 11 │   stable let stableLet = 42;
    ╰────

  × [ERROR]: no-stable
    ╭─[<input_path>:11:3]
 10 │   flexible let flexibleLet = 42;
 11 │   stable let stableLet = 42;
    ·   ───┬──
    ·      ╰── Do not use the `stable` keyword. It's implicit when using persistent actors.
 12 │ 
    ╰────

  × [ERROR]: shared-caller
    ╭─[<input_path>:13:16]
 12 │ 
 13 │   public shared(msg) func sharedCaller() {};
    ·                ──┬──
    ·                  ╰── Do not use `shared(msg)`. Use `shared({ caller })` instead.
 14 │   public shared msg func sharedCallerVar() {};
    ╰────

  × [ERROR]: shared-caller
    ╭─[<input_path>:14:17]
 13 │   public shared(msg) func sharedCaller() {};
 14 │   public shared msg func sharedCallerVar() {};
    ·                 ─┬─
    ·                  ╰── Do not use `shared(msg)`. Use `shared({ caller })` instead.
 15 │   public shared ({ caller }) func sharedCallerPat() {};
    ╰────

  × [ERROR]: transient-usage
    ╭─[<input_path>:19:3]
 18 │   transient let transientMap = OrderedMap.Make<Nat>(Nat.compare);
 19 │   transient let transientMap = OrderedMap.Make.Well<Nat>(Nat.compare);
    ·   ─────────────────────────────────┬─────────────────────────────────
    ·                                    ╰── Only use `transient` for OrderedMap.Make, OrderedSet.Make, and Random.Finite
 20 │ 
    ╰────

  × [ERROR]: assign-plus
    ╭─[<input_path>:21:3]
 20 │ 
 21 │   x := 1 + x;
    ·   ─────┬────
    ·        ╰── Use `+=` instead of reassigning the variable
 22 │   x := x - 1;
    ╰────

  × [ERROR]: assign-minus
    ╭─[<input_path>:22:3]
 21 │   x := 1 + x;
 22 │   x := x - 1;
    ·   ─────┬────
    ·        ╰── Use `-=` instead of reassigning the variable
 23 │   x := 1 - x;
    ╰────
