src/snapshots/lintoko__test__it_lints_default_rules.snap
---
source: src/lib.rs
expression: lint_output
---
  × [ERROR]: only-persistent-actor
   ╭─[<input_path>:5:14]
 4 │ 
 5 │ shared (msg) actor class() {
   ·              ──┬──
   ·                ╰── Only use persistent actors. Change `actor` to `persistent actor`.
 6 │   func letElse() {
   ╰────

  × [ERROR]: no-flexible
    ╭─[<input_path>:10:3]
  9 │ 
 10 │   flexible let flexibleLet = 42;
    ·   ────┬───
    ·       ╰── Do not use the `flexible` keyword. Use `transient` instead.
 11 │   stable let stableLet = 42;
    ╰────

  × [ERROR]: no-stable
    ╭─[<input_path>:11:3]
 10 │   flexible let flexibleLet = 42;
 11 │   stable let stableLet = 42;
    ·   ───┬──
    ·      ╰── Do not use the `stable` keyword. It's implicit when using persistent actors.
 12 │ 
    ╰────

  × [ERROR]: assign-plus
    ╭─[<input_path>:23:3]
 22 │ 
 23 │   x := 1 + x;
    ·   ─────┬────
    ·        ╰── Use `x += 1` instead of reassigning the variable.
 24 │   x := x + 2;
    ╰────

  × [ERROR]: assign-plus
    ╭─[<input_path>:24:3]
 23 │   x := 1 + x;
 24 │   x := x + 2;
    ·   ─────┬────
    ·        ╰── Use `x += 2` instead of reassigning the variable.
 25 │   x := x - 1;
    ╰────

  × [ERROR]: assign-minus
    ╭─[<input_path>:25:3]
 24 │   x := x + 2;
 25 │   x := x - 1;
    ·   ─────┬────
    ·        ╰── Use `x -= 1` instead of reassigning the variable
 26 │   x := 1 - x;
    ╰────

  × [ERROR]: pun-fields
    ╭─[<input_path>:28:13]
 27 │ 
 28 │   let _ = { field = field };
    ·             ──────┬──────
    ·                   ╰── Use field punning to to avoid repetition: Replace `{ field = field }` with `{ field }`
 29 │   let _ = { var dontPun = dontPun };
    ╰────

  × [ERROR]: no-bool-switch
    ╭─[<input_path>:30:11]
 29 │       let _ = { var dontPun = dontPun };
 30 │ ╭─▶   let _ = switch _ {
 31 │ │       case (false) {};
 32 │ │       case (true) {};
 33 │ ├─▶   };
    · ╰──── Don't switch on boolean values, use if instead
 34 │       let _ = switch _ {
    ╰────

  × [ERROR]: no-bool-switch
    ╭─[<input_path>:34:11]
 33 │       };
 34 │ ╭─▶   let _ = switch _ {
 35 │ │       case true {};
 36 │ │       case false {};
 37 │ ├─▶   };
    · ╰──── Don't switch on boolean values, use if instead
 38 │     
    ╰────

  × [ERROR]: unneeded-return
    ╭─[<input_path>:63:5]
 62 │   func unneededReturn() {
 63 │     return 10
    ·     ────┬────
    ·         ╰── unneeded return statement. You can remove the `return`
 64 │   };
    ╰────

  × [ERROR]: unneeded-return
    ╭─[<input_path>:65:27]
 64 │   };
 65 │   func unneededReturn() = return 10;
    ·                           ────┬────
    ·                               ╰── unneeded return statement. You can remove the `return`
 66 │ 
    ╰────

  × [ERROR]: unneeded-return
    ╭─[<input_path>:69:7]
 68 │     if (true) {
 69 │       return 4;
    ·       ────┬───
    ·           ╰── unneeded return statement. You can remove the `return`
 70 │     } else {
    ╰────

  × [ERROR]: unneeded-return
    ╭─[<input_path>:76:15]
 75 │   func unneededReturn() {
 76 │     if (true) return 4
    ·               ────┬───
    ·                   ╰── unneeded return statement. You can remove the `return`
 77 │     else {
    ╰────

  × [ERROR]: unneeded-return
    ╭─[<input_path>:85:14]
 84 │     switch (true) {
 85 │       case 1 return 40;
    ·              ────┬────
    ·                  ╰── unneeded return statement. You can remove the `return`
 86 │       case 2 { return 40; };
    ╰────

  × [ERROR]: unneeded-return
    ╭─[<input_path>:86:16]
 85 │       case 1 return 40;
 86 │       case 2 { return 40; };
    ·                ────┬────
    ·                    ╰── unneeded return statement. You can remove the `return`
 87 │     };
    ╰────

  × [ERROR]: case-types
    ╭─[<input_path>:90:8]
 89 │ 
 90 │   type lowerCase = Nat;
    ·        ────┬────
    ·            ╰── Types should be capitalized and use CamelCase.
 91 │   type Snake_case = Nat;
    ╰────

  × [ERROR]: case-types
    ╭─[<input_path>:91:8]
 90 │   type lowerCase = Nat;
 91 │   type Snake_case = Nat;
    ·        ─────┬────
    ·             ╰── Types should be capitalized and use CamelCase.
 92 │   type CamelCase = Nat;
    ╰────

  × [ERROR]: case-functions
    ╭─[<input_path>:94:8]
 93 │ 
 94 │   func UpperCase() {};
    ·        ────┬────
    ·            ╰── Functions should start lower case and use camelCase.
 95 │   func snake_case() {};
    ╰────

  × [ERROR]: case-functions
    ╭─[<input_path>:95:8]
 94 │   func UpperCase() {};
 95 │   func snake_case() {};
    ·        ─────┬────
    ·             ╰── Functions should start lower case and use camelCase.
 96 │   func _hiddenIsFine() {};
    ╰────
